@@ -6,7 +6,6 @@ scala_library(name='scala',
   ),
   dependencies=[
     '3rdparty/jvm/com/google/guava',
-    '3rdparty/jvm/commons-collections',
     'util/util-core/src/main/scala',
   ],
   sources=rglobs('*.scala'),
