@@ -6,6 +6,11 @@ Note that ``RB_ID=#`` correspond to associated messages in commits.
 
 Next Version
 
+Changes in Runtime Behavior:
+
+  * util-collection: LruMap is now backed by jdk LinkedHashMap instead of apache
+    collections LRUMap. ``RB_ID=833515``
+
 New Features:
 
   * util-core: Add `c.t.concurrent.Scheduler.blockingTimeNanos` which tracks time spent doing
